--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ a.menu-logo {
 /* Intro */
 
 .intro {
-	background: url('./assets/background-body.jpg') no-repeat center center;
+	background: url('../assets/background-body.jpg') no-repeat center center;
 	background-size: cover;
 	padding: 150px 0;
 	text-align: center;
